BatteryService: add dash charging support
DennySPb: port to R
Change-Id: I0515a3b6c643936a14b764530ffa58396beaadb8

--- a/core/res/res/values/potato_config.xml
+++ b/core/res/res/values/potato_config.xml
@@ -66,4 +66,6 @@
         <item>screenshot</item> <!--2 buttons nav-->
     </string-array>
 
+    <!-- Whether device has dash charging support -->
+    <bool name="config_hasDashCharger">false</bool>
 </resources>
