--- a/core/res/res/values/potato_symbols.xml
+++ b/core/res/res/values/potato_symbols.xml
@@ -48,4 +48,7 @@
   <java-symbol type="string" name="reboot_message" />
   <java-symbol type="array" name="custom_config_globalActionsList" />
 
+  <!-- Whether device has dash charging support -->
+  <java-symbol type="bool" name="config_hasDashCharger" />
+
 </resources>
