base: Import device hardware keys configs
Change-Id: I3469a4084590c96f41c6ff128cf008143d315728

--- a/core/res/res/values/potato_symbols.xml
+++ b/core/res/res/values/potato_symbols.xml
@@ -68,4 +68,7 @@
   <!-- Whether device can force navbar disabling -->
   <java-symbol type="bool" name="config_canForceDisableNavigationBar" />
 
+  <!-- Device hardware keys -->
+  <java-symbol type="integer" name="config_deviceHardwareKeys" />
+  <java-symbol type="integer" name="config_deviceHardwareWakeKeys" />
 </resources>
