--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -123,7 +123,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,hotspot,inversion,saver,work,cast,night,sound,heads_up,caffeine,screenshot,usb_tether,cpuinfo,adb_network,soundsearch
+        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,hotspot,inversion,saver,work,cast,night,sound,heads_up,caffeine,screenshot,usb_tether,cpuinfo,adb_network,soundsearch,aod
     </string>
 
     <!-- The tiles to display in QuickSettings -->
