--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -40,6 +40,7 @@
         android:layout_height="match_parent"
         android:minWidth="48dp"
         android:gravity="center_vertical|start"
+        android:layout_gravity="center_vertical|start"
         android:paddingStart="@dimen/status_bar_left_clock_starting_padding"
         android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
         android:singleLine="true"
@@ -60,6 +61,14 @@
         android:layout_weight="1"
         android:orientation="horizontal"
         android:gravity="center_vertical|end" >
+
+    <com.android.systemui.statusbar.policy.NetworkTraffic
+        android:id="@+id/network_traffic"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical|end"
+        android:layout_gravity="center_vertical|end"
+        android:visibility="gone" />
 
     <include layout="@layout/ongoing_privacy_chip" />
 
