FODCircleView: Refactor position / size / color configuration
* Expose color as a configurable attribute so that it can be configured
  in device-specific overlays.
* Fetch position and size directly from FOD HAL. These are all
  hardware-specific properties, and there is no need to rely on system
  properties.

Change-Id: Ic4a33b27ab419e1e92e2af814f5088c972872098

--- a/packages/SystemUI/res/values/potato_config.xml
+++ b/packages/SystemUI/res/values/potato_config.xml
@@ -14,4 +14,7 @@
 
     <!-- Config to enable/diaable qs tile tinting -->
     <bool name="config_enable_qs_tile_tinting">false</bool>
+
+    <!-- Color of the FOD view -->
+    <color name="config_fodColor">#00ff00</color>
 </resources>
