base: Add refresh rate setting [1/2]
Change-Id: I391f96b4992d4fe649ea07ee0d4860acc8adb387
Signed-off-by: AmulyaX <amulya.b520@gmail.com>

--- a/core/res/res/values/potato_symbols.xml
+++ b/core/res/res/values/potato_symbols.xml
@@ -68,4 +68,7 @@
   <!-- Whether device can force navbar disabling -->
   <java-symbol type="bool" name="config_canForceDisableNavigationBar" />
 
+  <!-- Whether device supports variable refresh rate -->
+  <java-symbol type="bool" name="config_hasVariableRefreshRate" />
+
 </resources>
