--- a/core/res/res/values/potato_config.xml
+++ b/core/res/res/values/potato_config.xml
@@ -70,4 +70,7 @@
     <!-- Whether device can force navbar disabling -->
     <bool name="config_canForceDisableNavigationBar">false</bool>
 
+    <!-- Whether device supports variable refresh rate -->
+    <bool name="config_hasVariableRefreshRate">false</bool>
+
 </resources>
