PackageManager: Allow device to specify vendor platform signatures
Devices with split system/vendor images may want to use the OEM's vendor
image. In that case, the OEM's platform signature is not actually the
same as the platform signature used to sign the Lineage system image.
Allow devices to specify an OEM platform signature which will also be
recognized as the system's platform signature.

*anayw2001 edits - bring up to 11

Change-Id: Ida9bb25a32234af9d9507a214eae6a4672320d2b
[ghostrider-reborn: adapt to 13]
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/core/res/res/values/potato_config.xml
+++ b/core/res/res/values/potato_config.xml
@@ -6,4 +6,9 @@
     <!-- Fingerprint from stock ROM -->
     <string name="config_stockFingerprint" translatable="false"></string>
 
+    <!-- The list of vendor package signatures that should also be considered
+         platform signatures, specifically for use on devices with a vendor partition. -->
+    <string-array name="config_vendorPlatformSignatures">
+    </string-array>
+
 </resources>
