PowerMenu advanced reboot toggle - Android 11
and also allow max 4 button instead of 3

--
Now R already provides an additional dialog when there are more
than the max allowed buttons in the first row (3 by default),
to put there both Power and Restart button.

We can use that existing logic to put together Restart and our
custom buttons (recovery-bootloader-systemui), without breaking
the possibility for Power to be moved there if needed.

Q reference: https://github.com/ezio84/abc_frameworks_base/commit/749ba7b9e0821d755d8775b018af266083569ffc

Power menu: don't allow device trees to override the config

Advanced power: fix Power showing twice if lockdown button is available

Change-Id: I3846b4faede8c833bb0808066a002989606a13e9
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/core/res/res/values/potato_config.xml
+++ b/core/res/res/values/potato_config.xml
@@ -11,6 +11,14 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Power Menu -->
+    <string-array translatable="false" name="custom_config_globalActionsList">
+        <item>emergency</item>
+        <item>lockdown</item>
+        <item>power</item>
+        <item>restart</item>
+        <item>screenshot</item> <!--2 buttons nav-->
+    </string-array>
 
      <!-- The list of vendor package signatures that should also be considered
           platform signatures, specifically for use on devices with a vendor partition. -->
@@ -56,4 +64,5 @@
 
     <!-- Hide FOD while Going to sleep from lockscreen to avoid HBM flicker -->
     <bool name="config_inDisplayFingerprintFlickersGoingToSleep">false</bool>
+
 </resources>
